[package]
name = "bevy_fontmesh"
version = "0.1.0"
edition = "2021"
authors = ["Po Hsuan Lai"]
description = "Simple and focused Bevy plugin for generating 3D text meshes from fonts"
license = "MIT"
repository = "https://github.com/PoHsuanLai/bevy_fontmesh"
documentation = "https://docs.rs/bevy_fontmesh"
homepage = "https://github.com/PoHsuanLai/bevy_fontmesh"
readme = "README.md"
keywords = ["bevy", "font", "mesh", "text", "ttf2mesh"]
categories = ["graphics", "game-engines", "rendering"]
exclude = ["assets/"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_log",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "tonemapping_luts",
    "zstd_rust", # Added zstd backend
] }
fontmesh = "0.3"
thiserror = "1.0"

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_log",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "tonemapping_luts",
    "zstd_rust", # Added zstd backend
] }
rand = "0.9.2"
