[package]
name = "bevy_fontmesh"
version = "0.1.3"
edition = "2021"
authors = ["Po Hsuan Lai"]
description = "Simple and focused Bevy plugin for generating 3D text meshes from fonts"
license = "MIT"
repository = "https://github.com/PoHsuanLai/bevy_fontmesh"
documentation = "https://docs.rs/bevy_fontmesh"
homepage = "https://github.com/PoHsuanLai/bevy_fontmesh"
readme = "README.md"
keywords = ["bevy", "font", "mesh", "text", "ttf2mesh"]
categories = ["graphics", "game-engines", "rendering"]
exclude = ["assets/", "images/"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_pbr",
    "bevy_render",
] }
fontmesh = "0.3"
thiserror = "2.0"

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "bevy_core_pipeline",
    "multi_threaded",
    "tonemapping_luts",
    "zstd_rust",
    "x11",  # or "wayland" depending on your platform
] }
rand = "0.9.2"
